[package]
name = "mcdl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "2.33.3"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
sha-1 = "0.9.8"
tokio = { version = "1.6.1", features = ["full"] }

[features]
