[package]
name = "mcdl"
version = "0.0.2"
edition = "2021"
description = "Minecraft server executable downloader"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
sha-1 = "0.9.8"
ureq = { version = "2.3.0", features = ["json"] }

[features]

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
